MMS radios should support NowPlaying metadata
Now, it doesn't.
Probably we need to use a user-agent > 9 to get the $M packets.
Now, it doesn't.
Probably we need to use a user-agent > 9 to get the $M packets.
added Component::Input: network streams Severity::normal Type::feature Version::master git + 1 deleted label
changed milestone to %Features paradize
unassigned @Courmisch
wms service down switched to flash
commit b6dd43d5 Author: Francois Cartegnie fcvlcdev@free.fr Date: Tue Dec 17 18:49:40 2013 +0100
demux: ogg: add preparsing of headers (fix [#6691](https://code.videolan.org/videolan/vlc/-/issues/6691))
added Status::fixed label
closed
VideoLAN code repository instance