demux: ogg: add preparsing of headers (fix #6691)